Make document reading and deletion safe
